[package]
name = "robo2_3_2024_a"
version = "0.1.0"
edition = "2021"

[dependencies]
differential_two_wheel_control= { git = "https://github.com/nityc-d-robo/differential_two_wheel_control",rev = "5f5b3b2fd332f74e89f363eb56f17ca5b49f0ebb" }
motor_controller = { git = "https://github.com/nityc-d-robo/motor_controller",rev = "ce467588a86a9971a9c5e9354e373206d4cbd4ad" }

safe_drive = "0.4"

[package.metadata.ros]
safe_drive_version = "0.3"
